자바 최신 파일 컴파일 ```javac --release 21 --enable-preview -cp src src/Main.java -d out```