@@ -17,6 +17,18 @@ clean:
 ```
 
 
+## 자바 최신 파일 컴파일 ```javac --release 21 --enable-preview -cp src src/Main.java -d out```
+
+```Makefile
+r:
+		javac --release 21 --enable-preview -cp src src/Main.java -d out
+		java -cp out Main
+clean:
+		rm -rf out
+```
+
+https://github.com/JosePaumard/JDK20_2023-Loom-Lab
+
 ## Version1
 
 - ```make``` or  ```make run```
